--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -12,21 +12,21 @@
     transition: transform 0.3s ease-out;
 }
 
-@media (min-width: 500px){
-    .SideDrawer{
+@media (min-width: 500px) {
+    .SideDrawer {
         display: none;
     }
 }
 
-.Open{
-    trasnform: translateX(0)
+.Open {
+    transform: translateX(0);
 }
 
-.Close{
-    trasnform: translateX(-100%)
+.Close {
+    transform: translateX(-100%);
 }
 
-.Logo{
+.Logo {
     height: 11%;
     margin-bottom: 32px;
 }
